Update: Full Toolbox Integration for static deployment and optimized GitHub Pages workflow

--- a/ardublockly/index.html
+++ b/ardublockly/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=https://ardublockly.ymtech.education/ardublockly/" />
+  <meta http-equiv="refresh" content="0; url=./ardublockly/index.html" />
  </head>
  <body>
  </body>
